# claude-subscription-relay

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: deploy.yml
app/: claude_runner.py  config.py  main.py  queue_worker.py  schemas.py  telegram_bot.py  token_manager.py
context/: instructions.md  memory.md
docs/: OAUTH_TROUBLESHOOTING.md
scripts/: sync-token.sh
tests/: conftest.py  test_claude_runner.py  test_config.py  test_endpoints.py  test_queue_worker.py  test_schemas.py
